# ggnumlcash.cpp

./: CLAUDE.md  README.md  copilot-memories-from-dan.md
.github/workflows/: cmake-multi-platform.yml
docs/: development-roadmap.md  project-tracking.md
docs/issues/: GENERATION_SUMMARY.md  issue-003-market-data-integration.md  issue-004-quantitative-models.md  issue-005-ml-integration.md  issue-006-regulatory-compliance.md  issue-008-cross-asset-trading.md  issue-009-algorithmic-strategies.md  issue-010-cloud-native.md  issue-011-api-platform.md  issue-012-security-hardening.md  issue-013-quantum-computing.md  issue-014-blockchain-defi.md  issue-015-esg-sustainable.md
examples/: CMakeLists.txt
examples/financial-sim/: CMakeLists.txt  DATABASE_PERSISTENCE_README.md  ENHANCED_COA_README.md  FINANCIAL_REPORTING_README.md  TASK_1.2_IMPLEMENTATION_SUMMARY.md  TASK_1.4_IMPLEMENTATION_SUMMARY.md  TRANSACTION_ENGINE_README.md  account-templates.h  audit-persistence.cpp  audit-persistence.h  audit-trail.cpp  audit-trail.h  chart-of-accounts.h  comprehensive-coa.json  database-persistence.cpp  database-persistence.h  demo-database-persistence.cpp  demo-financial-reporting.cpp  demo-transaction-engine.cpp  demo-virtual-device.cpp  device-admin.cpp  enhanced-coa.h  financial-data-connector.cpp  financial-data-connector.h  financial-device-driver.cpp  financial-reporting.cpp  financial-reporting.h  generate-comprehensive-coa.py  test-audit-persistence.cpp  test-audit-trail.cpp  test-database-persistence.cpp  test-enhanced-coa.cpp  test-financial-data-connector.cpp  test-financial-reporting.cpp  test-transaction-engine.cpp  test-transaction-validator.cpp  test-virtual-device.cpp  transaction-engine.cpp  transaction-engine.h  transaction-validator.cpp  (+3 more)
examples/ontogenesis/: CMakeLists.txt  README.md  ontogenesis-demo.cpp  test-ontogenesis.cpp
include/: ontogenesis.h
src/: CMakeLists.txt  llama-ontogenesis.cpp
